--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ ul{
     margin: 0; 
     padding: 0; 
     list-style: none; 
+    text-decoration: none;
 }
 
 .link {
@@ -134,6 +135,10 @@ background-color: transparent;
 
 }
 .contact{
+    align-items: center;
+    display: flex;
+}
+.contact{
     list-style-type: none; 
 }
 
@@ -158,7 +163,7 @@ list-style-type: none;
     margin-right: 50px;
 }
 .address .contact{
-    display: block;
+    display: flex;
     padding-top: 32px;
     padding-bottom: 32px;
 
@@ -496,6 +501,7 @@ background-color: var(--link-background-color);
 }
 .image-list{
 list-style-type: none;
+text-decoration: none;
 }
 .image-item{
 margin-right: 30px;
@@ -524,7 +530,7 @@ line-height: 2;
 letter-spacing: 0.06em;
 color: var(--main-text-color);
 padding-top: 20px;
-margin-bottom: 5px;
+text-decoration: none;
 }
 .image-name{
     padding-left: 24px;
@@ -537,6 +543,7 @@ line-height: 1.87;
 letter-spacing: 0.03em;
 color: var(--secondary-text-color);
 padding-bottom: 20px;
+text-decoration: none;
 }
 .type{
     padding-left: 24px;
