--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@ color: var(--logo-accent-color);
 color: var(--main-text-color);
 }
 /* LINKS */
+
 .navigation{
 color: var(--main-text-color);
 text-decoration: none;
@@ -103,6 +104,25 @@ text-decoration: none;
      padding-top: 32px;
      padding-bottom: 32px;
  }
+ .navigation{
+    position: relative;
+}
+.navigation::after{
+    position: absolute;
+    content:"" ;
+    display: block;
+    width: 100%;
+    height: 5px;
+    background-color: #2196F3;
+    left: 0;
+    bottom: 0;
+    border-radius: 2px;
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+.navigation:hover::after{
+    opacity: 1;
+}
  /* WEBSTUDIO HEADER*/
  .line{
     display: flex;
@@ -343,6 +363,30 @@ color: var(--secondary-text-color);
 .what-we-do .list-item:not(:last-child){
     margin-right: 30px;
 }
+.list-item{
+    position: relative;
+}
+.app{
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--rare-white-text-color);
+}
+.overlay-apps{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 370px;
+    height: 70px;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(47, 48, 58, 0.8);
+
+}
 /* .................................................COMMAND ......................................*/
 
 .team-list{
@@ -549,10 +593,39 @@ text-decoration: none;
     padding-left: 24px;
     padding-right: 24px;
 }
-.project-link:hover,
-.project-lick:focus{
-
+.image-item{
+    overflow: hidden;
 }
+ .relative-thumb{
+    position: relative;
+    overflow: hidden;
+}
+ .project-info{
+font-weight: 400;
+font-size: 18px;
+line-height: 1.55;
+letter-spacing: 0.03em;
+color: var(--rare-white-text-color);
+} 
+.project-info{
+    content: "";
+    position: absolute;
+    display: flex;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(33, 150, 243, 0.9);
+    opacity: 0;
+    padding: 63px 24px;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.image-item:hover .project-info,
+.image-item:focus .project-info{
+    transform: translateY( 0);
+    opacity: 1;
+} 
 /* ................................FOOTER .............*/
 .container  .footer-finish{
 max-width: 1600px;
