--- a/css/styles.css
+++ b/css/styles.css
@@ -440,10 +440,10 @@ margin-bottom: 10px;
     border-radius: 50%;
     fill: #ffffff;
  }
- /*
+ 
 .network-item:not(:last-child){
     margin-right: 10px;
-}  */
+} 
 
 
 .network-link{
@@ -616,7 +616,6 @@ color: var(--rare-white-text-color);
     width: 100%;
     height: 100%;
     background: rgba(33, 150, 243, 0.9);
-    opacity: 0;
     padding: 63px 24px;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -624,7 +623,6 @@ color: var(--rare-white-text-color);
 .image-item:hover .project-info,
 .image-item:focus .project-info{
     transform: translateY( 0);
-    opacity: 1;
 } 
 /* ................................FOOTER .............*/
 .container  .footer-finish{
@@ -697,7 +695,7 @@ letter-spacing: 0.03em;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--rare-white-text-color);
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     }
 .join-list{
 display: flex;
