--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,9 @@ body{
 }
 
 /* LOGO */
+.border-line{
+    border-bottom: 1px solid rgba(236, 236, 236, 1);
+}
 .logo{
 font-family: 'Raleway';
 font-style: normal;
@@ -241,7 +244,7 @@ color: var(--link-text-color);
     margin-left: auto;
     margin-right: auto;
 }
-
+/* .....................modal window.............. */
 
 .header{
 color: var(--rare-white-text-color);
@@ -735,4 +738,66 @@ justify-content: center;
 .join-link:hover,
 .join-link:focus{
     background-color: var(--button-background-color);
+}
+
+/* -----модалка----- */
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background: rgba(0, 0, 0, 0.2);
+
+   
+}
+
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    min-width: 528px;
+    min-height: 581px;
+    padding: 17px;
+
+    background-color: var(--primary-background-color);
+
+    background: #FFFFFF;
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); 
+
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+
+.close-button {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+
+    width: 30px;
+    height: 30px;
+
+    background-color: var(--primary-background-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+
+    cursor: pointer;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.close-button:hover,
+.close-button:focus {
+    border-color: var(--button-bg) ;
 }
